<resources>
    <string name="app_name" translatable="false">Start Android App</string>
    <string name="btn_category_text">category</string>
    <string name="btn_favorite_text">favorite</string>
    <string name="category_logo">Category logo</string>
    <string name="category_list">Category list</string>
    <string name="category_image_content_description">%1$s сategory image</string>
    <string name="content_description_img_of_category">Img of %1$s category</string>
    <string name="content_description_recipe_img">Img of %1$s recipe</string>
    <string name="ingredients">ingredients</string>
    <string name="portions">Portions: </string>
    <string name="cooking_method">cooking method</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="favorites_image">Favorites image</string>
    <string name="favorites">favorites</string>
    <string name="favorites_is_empty">You haven\'t added any recipes to your favorites yet</string>
    <string name="error_loading_category_list">Error loading category list</string>
    <string name="error_loading_favorite_recipes">Error loading favorite recipes</string>
    <string name="error_loading_recipe">Error loading recipe</string>
    <string name="error_loading_recipe_list">Error loading recipe list</string>

</resources>